Feat(booking): implement Transactional Outbox pattern
- Added OutboxEvent entity and Liquibase migration
- Refactored PaymentService to save events to DB
- Implemented OutboxScheduler for reliable event relay
- Updated Kafka consumers to handle String deserialization